[tool.poetry]
name = "benchmark-rocks-config"
version = "0.1.0"
description = ""
authors = ["Daniel Freire <daniel.freire@cloudwalk.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
