[tool.poetry]
name = "deploy"
version = "0.1.0"
description = "Script to change node roles between Leader and Follower"
authors = ["gabriel-aranha-cw <gabriel.aranha@cloudwalk.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
